[gd_scene load_steps=9 format=3 uid="uid://bh0mxh6j84uyu"]

[ext_resource type="Shader" path="res://Script/pause_menu.gdshader" id="1_2yy5q"]
[ext_resource type="Script" path="res://Script/pause_menu.gd" id="1_kg1ct"]
[ext_resource type="PackedScene" uid="uid://qw8mhcsihprh" path="res://Interface/settings.tscn" id="3_ywhc4"]
[ext_resource type="Texture2D" uid="uid://cq3vkaqbwoc2d" path="res://Asset/Images/settings button.png" id="4_172yk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uskwq"]
shader = ExtResource("1_2yy5q")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_qug0n"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.287]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0ygcc"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.287]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xwwwp"]
_data = {
"RESET": SubResource("Animation_qug0n"),
"blur": SubResource("Animation_0ygcc")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kg1ct")

[node name="ColorRect" type="ColorRect" parent="."]
process_mode = 3
material = SubResource("ShaderMaterial_uskwq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -474.0
offset_top = -477.0
offset_right = 22.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="Pause_Options_Container" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="Resume" type="Button" parent="PanelContainer/Pause_Options_Container"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
text = "Resume"

[node name="Options" type="Button" parent="PanelContainer/Pause_Options_Container"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
text = "Options"

[node name="Leave" type="Button" parent="PanelContainer/Pause_Options_Container"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
text = "Leave"

[node name="Settings" parent="PanelContainer" instance=ExtResource("3_ywhc4")]
visible = false
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xwwwp")
}

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
texture_normal = ExtResource("4_172yk")

[connection signal="pressed" from="PanelContainer/Pause_Options_Container/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/Pause_Options_Container/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/Pause_Options_Container/Leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
